--- a/global.css
+++ b/global.css
@@ -116,7 +116,6 @@ a:hover {
   max-width: 1000px;
 }
 
-
 h1 {
   font-size: 78px;
   color: #C596F3;
@@ -690,4 +689,33 @@ pre tt:after {
 
 .menu-item:hover {
   transform: translate(0px, -3px);
+}
+
+.about-container {
+  background: #C596F3;
+  padding: 4rem 0;
+  color: #000000;
+  color: #fff;
+  margin-top: 4rem;
+  font-size: 14px;
+}
+
+.about-container h5,
+.about-container p,
+.about-container li {
+  color: #000000;
+}
+.about-container h5 {
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 1px;
+  font-weight: 500;
+}
+
+.contact-container {
+  width: 100%;
+  background: #000;
+  color: #c596f3;
+  padding: 6rem 0;
+  text-align: center;
 }
